--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+html{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.btn{
+font-size: 1em;
+color: white;
+border-radius: 20px;
+background-color: crimson;
+border: 1px solid black;
+box-shadow: 2px 2px 4px 0 black;
+text-shadow: 1px 1px 1px black;
+    text-align: center;
+    padding: 7px 12px;
+    cursor:pointer;
+}
+
+.btn:active{
+    box-shadow: 2px 2px 4px 0 black inset;
+}
